NT/ds/security/cryptoapi/pkitrust/tests/signing/bad/b_dig.cla
version https://git-lfs.github.com/spec/v1
oid sha256:aed735dd23efdb328836c2888c79cb1ec3199d1877874285b95346dbd9f3329f
size 5670
